# vpn-passthrough

./: .gitignore  CLAUDE.md  Makefile  NOTE.md  README.md  TODO.md  mise.toml  netns.nftables  poc.py  pyproject.toml  toto.nftables  toto.txt  ttototo  variables.yaml
.claude/skills/add-message-type/: SKILL.md
.claude/skills/handle-tickets/: SKILL.md
app/: pyproject.toml
mise/: config.toml
mise/tasks/: add-ticket  close-ticket  connect-to-remote-server  create-tunnel  decrypt-variables  dnsleaktest  encrypt-variables  hello-world  install-on-arch-linux  install-on-remote-server  open-ticket  package-for-arch-linux  run-process  start-server
src/radium226/vpn_passthrough/: __init__.py  app.py  app_bkp.py  ca.rsa.2048.crl  dns.py  internet.nft  internet.py  models.py  netns.py  network_interfaces.py  openvpn-script.sh  openvpn.py  pia.py  pia_bkp.py  pipewire.py  port_forwarding.py  vpn_passthrough.py
tasks/done/: high-client-event-dispatch-on.md  high-internet-silent-firewall-failure.md  high-netns-stale-pid-file.md  high-netns-tunnel-name-validation.md  high-network-interfaces-no-rollback.md  high-pia-orphaned-rebind-tasks.md  high-service-fd-close-error-handling.md  high-service-jinja2-unguarded.md  high-service-processes-dict-race.md  high-transport-buffer-error-context.md  medium-arch-linux-packaging.md
tasks/todo/: low-hardcoded-capabilities.md  low-hardcoded-openvpn-options.md  low-missing-docstrings.md  low-netns-cleanup-silent-failures.md  low-openvpn-log-task-cleanup.md  low-pia-no-tcp-fallback.md  medium-complete-handlers-refactor.md  medium-dns-leak-guard-incomplete.md  medium-inconsistent-run-modules.md  medium-server-configuration.md  medium-server-pia-config.md  medium-tests-app-cli.md  medium-tests-ipc-transport.md  medium-tests-pia-coverage.md  medium-tests-server-internals.md  medium-type-annotations.md  medium-vpn-backend-abstraction.md
tests/: conftest.py  test_check_connectivity.py  test_find_ip.py  test_http_server.py  test_network_namespace.py  test_nftables.py  test_openvpn.py  test_openvpn_script.py  test_pia.py  test_shell.pyskip  test_sudo.py  test_vpn_passthrough.py
tests/client/: test_client.py
tests/e2e/: test_e2e.py
tests/server/: test_core.py
tests/shared/: test_pia.py
(+77 files in other folders)
