[project]
name = "vpn-passthrough"
version = "0.1.0"
description = "VPN passthrough"
authors = [
    {name = "radium", email = "radium@rouages.xyz"},
]
dependencies = [
    "pytest>=7.4.0",
    "mypy>=1.5.1",
    "requests>=2.31.0",
    "click>=8.1.7",
    "click-default-group>=1.2.4",
    "dill>=0.3.7",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
vpn-passthrough = "vpn_passthrough.app:app"

[tool.pdm.dev-dependencies]
dev = [
    "types-requests>=2.31.0.2",
    "types-click-default-group>=1.2.0.0",
]
