[project]
name = "vpn-passthrough"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "loguru>=0.7.3",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
]

[project.scripts]
vpn-passthrough = "radium226.vpn_passthrough:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/radium226"]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "ruff>=0.12.3",
    "types-requests>=2.32.4.20250611",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--capture=no"

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "build/",
    "dist/",
    ".venv/"
]

# [tool.mypy.src.myproject]
# disallow_untyped_defs = true
# disallow_any_expr = true
# disallow_any_decorated = true
# disallow_untyped_calls = true
# disallow_incomplete_defs = true
# check_untyped_defs = true
# no_implicit_optional = true
# warn_return_any = true
# warn_unused_ignores = true